--- a/index-2.html
+++ b/index-2.html
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
             <li>
-              <a target="_blank" href="https://opensea.io/collection/p3p3-y00ts">Opensea</a>
+              <a target="_blank" href="https://opensea.io/collection/">Opensea</a>
             </li>
             <li>
-              <a target="_blank" href="https://twitter.com/p3p3y00ts">Twitter</a>
+              <a target="_blank" href="https://twitter.com/">Twitter</a>
             </li>
             <li>
-              <a target="_blank" href="https://etherscan.io/address/0xbe55781d3f8f51a9b6b760af136062b6f2e9f657">Etherscan</a>
+              <a target="_blank" href="https://etherscan.io/address/">Etherscan</a>
             </li>
             <li>
               <button class="btn btn-default btn-lg" id="connectWallet" onclick="connect()">Connect</button>
@@ -48,9 +48,9 @@
             <div class="col-md-8 col-md-offset-2">
 			  <img src="img/logo.png" class="img-rounded img-responsive center-block" style="width:50%; height:auto;"  alt="Responsive image"><br><br>
 			  <img id="preview" src="img/p3p3y00ts.gif" class="img-rounded img-responsive center-block" style="width:50%; height:auto;"  alt="Responsive image"><br><br>
-              <p class="intro-text">P3p3 Y00ts,P3p3 Y00ts, HoREEEEEEE!</p>
-			  <h2>Missed the 𝘆𝟬𝟬𝘁𝘀? Stop crying and join the PePe y00ts in our MeMetical adventure on $eTH</h2>
-			  <button type="button" onclick="connect()"  class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Mint to P3p3 Y00ts!</button>
+              <p class="intro-text"></p>
+			  <h2></h2>
+			  <button type="button" onclick="connect()"  class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Mint Blur Ape YC !</button>
             </div>
           </div>
         </div>
@@ -66,12 +66,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="text-primary modal-title text-center">M I N T Details</h4>
+          <h4 class="text-primary modal-title text-center"></h4>
         </div>
         <div class="modal-body">
-          <p class="text-primary text-center">Free Mint 3/WALLET</p>
-          <p class="text-primary text-center">The rest are 0.002 ETH / P3p3 Y00ts</p>
-          <p class="text-primary text-center" id="minted">6969 P3p3 Y00ts</p>
+          <p class="text-primary text-center"></p>
+          <p class="text-primary text-center"></p>
+          <p class="text-primary text-center" id="minted"></p>
 		    <div class="center">
 			<div class="input-group mr-1">
           <span class="input-group-btn">
