--- a/index-2.html
+++ b/index-2.html
@@ -21,7 +21,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
             <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand page-scroll intro" style="color:black;" href="#page-top">P3p3 Y00ts </a>
+          <a class="navbar-brand page-scroll intro" style="color:black;" href="#page-top">Blur Apes </a>
         </div>
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
