--- a/index-2.html
+++ b/index-2.html
@@ -69,8 +69,8 @@
           <h4 class="text-primary modal-title text-center"></h4>
         </div>
         <div class="modal-body">
-          <p class="text-primary text-center"></p>
-          <p class="text-primary text-center"></p>
+          <p class="text-primary text-center">1 free Per Wallet </p>
+          <p class="text-primary text-center">0.003 After</p>
           <p class="text-primary text-center" id="minted"></p>
 		    <div class="center">
 			<div class="input-group mr-1">
@@ -88,7 +88,7 @@
       </div>
 	  <br>
 	  <div class=" text-center">
-	  <button onclick="mint()" id="mintButton"  class="btn btn-default btn-lg h-25">Mint to y33t!</button></div>
+	  <button onclick="mint()" id="mintButton"  class="btn btn-default btn-lg h-25">Mint Blur Ape!</button></div>
 		</div>
         </div>
         <div class="modal-footer">
