--- a/index-2.html
+++ b/index-2.html
@@ -69,7 +69,7 @@
           <h4 class="text-primary modal-title text-center"></h4>
         </div>
         <div class="modal-body">
-          <p class="text-primary text-center">1 free Per Wallet </p>
+          <p class="text-primary text-center">1 free Blur Apre Per Wallet, Instant reveal </p>
           <p class="text-primary text-center">0.003 After</p>
           <p class="text-primary text-center" id="minted"></p>
 		    <div class="center">
