--- a/index-2.html
+++ b/index-2.html
@@ -46,7 +46,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
-			  <img src="img/logo.png" class="img-rounded img-responsive center-block" style="width:50%; height:auto;"  alt="Responsive image"><br><br>
+			  <img src="img/logo.gif" class="img-rounded img-responsive center-block" style="width:50%; height:auto;"  alt="Responsive image"><br><br>
 			  <img id="preview" src="img/p3p3y00ts.gif" class="img-rounded img-responsive center-block" style="width:50%; height:auto;"  alt="Responsive image"><br><br>
               <p class="intro-text"></p>
 			  <h2></h2>
