--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 			<TD BACKGROUND="fade.gif">
 				&middot;
 					<A HREF="index-2.html">
-						P3p3 Y00ts
+						Blur Apes
 					</A>		
 			</TD>
 		</TR>
